test_suite/tests/ui/nightly/fail/invalid_parent/nightly_inexistent_parent.stderr
error: custom attribute panicked
 --> $DIR/nightly_inexistent_parent.rs:3:1
  |
3 | #[command]
  | ^^^^^^^^^^
  |
  = help: message: cannot find parent command: `list2` for `sort`
